hphp/hack/test/typecheck/expression_trees/namespace.php.like_types.exp
File "namespace.php", line 12, characters 19-19:
Typing error (Typing[4110])
  File "namespace.php", line 12, characters 19-19:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 20, characters 6-43:
  But got `dynamic` because it is an unenforceable type
